--- a/001.html
+++ b/001.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <hr>
-    <img src="images/F.JPG">
+    <img src="images/F.jpg">
         <p>加了滿滿大蒜的煎餃味道十足，跟外面賣的嘗起來有不同的風味</p>
     <hr>
     <a href="index.html">連到首頁<</a>        
