--- a/002.html
+++ b/002.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <hr>
-    <img src="images/A.JPG">
+    <img src="images/A.jpg">
         <p>滑嫩的蛋加上脆脆的蝦仁口感超棒</p>
     <hr>
     <a href="index.html">連到首頁<</a>        
